# epub-translator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/project/: ARCHITECTURE.md  BACKLOG.md  SPEC.md
plans/: PLAN.md  epub-cli-translation-plan.md
src/epub_translate_cli/: __init__.py  cli.py  main.py
src/epub_translate_cli/application/: __init__.py
src/epub_translate_cli/application/services/: __init__.py  audiobook_orchestrator.py  chapter_translator.py  translation_orchestrator.py
src/epub_translate_cli/domain/: __init__.py  errors.py  models.py  ports.py
src/epub_translate_cli/infrastructure/: __init__.py
src/epub_translate_cli/infrastructure/epub/: __init__.py  epub_repository.py  opf_spine_parser.py  xhtml_parser.py
src/epub_translate_cli/infrastructure/llm/: ollama_audio_generator.py  ollama_translator.py  openai_speech_audio_generator.py  prompt_builder.py
src/epub_translate_cli/infrastructure/logging/: logger_factory.py
src/epub_translate_cli/infrastructure/reporting/: chapter_stage_store.py  json_report_writer.py
tests/integration/: test_epub_round_trip.py  test_stage_store_lifecycle.py
tests/unit/: test_cli_reset_resume_flag.py  test_ollama_contract.py  test_orchestrator_abort_on_error.py  test_orchestrator_resume_staging.py  test_preserve_inline_formatting.py  test_sanitise_response.py  test_skip_reason.py
